syntax = "proto3";

package payment;

option go_package = "./payment";

service PaymentService {
  rpc ProcessPayment (ProcessPaymentRequest) returns (ProcessPaymentResponse);
}

message ProcessPaymentRequest {
  string order_id = 1;
  double amount = 2;
  string payment_method = 3;
}

message ProcessPaymentResponse {
  string payment_id = 1;
  string status = 2;
}